<resources>
    <string name="app_name">Chat App</string>
    <!-- Notifications settings -->
    <string name="channel_name">Chat App</string>
    <string name="channel_description">Chat App Notifications</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_chats">Chats</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <!-- Create chat dialog -->
    <string name="dialog_create_chat_title">Create chat</string>
    <string name="dialog_create_chat_name">Chat name</string>
    <string name="dialog_create_chat_public">Public chat</string>
    <string name="dialog_create_chat_create">Create</string>
    <string name="dialog_create_chat_cancel">Cancel</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_chat_content_description">Represents an image view in the
        item
    </string>

    <!-- Save user credentials -->
    <string name="user_login">user_login</string>
    <string name="user_password">user_password</string>
</resources>