<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_create_chat_title" />
    <EditText
        android:id="@+id/dialog_create_chat_name"
        android:inputType="textCapWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/dialog_create_chat_name" />

    <Switch
        android:id="@+id/dialog_create_chat_public"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="6dp"
        android:checked="true"
        android:text="@string/dialog_create_chat_public" />

</LinearLayout>